compiler/src/parser/grammar/EzLangParser.py
# Generated from grammar/EzLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EzLangParser ( Parser ):

    grammarFileName = "EzLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'let'", "'const'", "'static'", "'struct'", 
                     "'type'", "'declare'", "'loop'", "'break'", "'continue'", 
                     "'import'", "'export'", "'from'", "'match'", "'catch'", 
                     "'throw'", "'flow'", "'typeof'", "'return'", "'in'", 
                     "'for'", "'as'", "'extern'", "'I8'", "'I32'", "'I64'", 
                     "'U8'", "'U32'", "'U64'", "'F32'", "'F64'", "'Str'", 
                     "'Bool'", "'Void'", "'Vec'", "'List'", "'linux'", "'macos'", 
                     "'windows'", "'android'", "'ios'", "'emcc'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", 
                     "';'", "':'", "','", "'.'", "'='", "'?'", "'!'", "'@'", 
                     "'&'", "'|'", "'^'", "'~'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'=='", "'!='", "'<='", "'>='", "'<<'", "'>>'", 
                     "'&&'", "'||'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'&='", "'|='", "'^='", "'<<='", "'>>='", "'=>'", "'->'", 
                     "'...'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONST", "STATIC", "STRUCT", "TYPE", 
                      "DECLARE", "LOOP", "BREAK", "CONTINUE", "IMPORT", 
                      "EXPORT", "FROM", "MATCH", "CATCH", "THROW", "FLOW", 
                      "TYPEOF", "RETURN", "IN", "FOR", "AS", "EXTERN", "I8", 
                      "I32", "I64", "U8", "U32", "U64", "F32", "F64", "STR", 
                      "BOOL", "VOID", "VEC", "LIST", "LINUX", "MACOS", "WINDOWS", 
                      "ANDROID", "IOS", "EMCC", "BOOL_LITERAL", "INTEGER_LITERAL", 
                      "FLOAT_LITERAL", "STRING_LITERAL", "IDENTIFIER", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "LANGLE", "RANGLE", "SEMI", "COLON", "COMMA", "DOT", 
                      "ASSIGN", "QUESTION", "BANG", "AT", "AMPERSAND", "PIPE", 
                      "CARET", "TILDE", "PLUS", "MINUS", "STAR", "SLASH", 
                      "PERCENT", "EQ", "NE", "LE", "GE", "SHL", "SHR", "AND", 
                      "OR", "PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", 
                      "SLASH_ASSIGN", "PERCENT_ASSIGN", "AMPERSAND_ASSIGN", 
                      "PIPE_ASSIGN", "CARET_ASSIGN", "SHL_ASSIGN", "SHR_ASSIGN", 
                      "FAT_ARROW", "THIN_ARROW", "ELLIPSIS", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS" ]

    RULE_compilationUnit = 0
    RULE_declaration = 1
    RULE_variableDecl = 2
    RULE_structDecl = 3
    RULE_structMember = 4
    RULE_structSpread = 5
    RULE_structField = 6
    RULE_structMethod = 7
    RULE_typeAliasDecl = 8
    RULE_typeShape = 9
    RULE_typeShapeMember = 10
    RULE_typeShapeSpread = 11
    RULE_functionDecl = 12
    RULE_importDecl = 13
    RULE_importSpecList = 14
    RULE_importSpec = 15
    RULE_exportDecl = 16
    RULE_externDecl = 17
    RULE_targetPlatform = 18
    RULE_declareDecl = 19
    RULE_type_ = 20
    RULE_baseType = 21
    RULE_genericParams = 22
    RULE_genericArgs = 23
    RULE_typeList = 24
    RULE_functionType = 25
    RULE_paramTypeList = 26
    RULE_paramType = 27
    RULE_expression = 28
    RULE_assignmentExpression = 29
    RULE_assignmentOperator = 30
    RULE_pipelineExpression = 31
    RULE_conditionalExpression = 32
    RULE_rangeExpression = 33
    RULE_orExpression = 34
    RULE_andExpression = 35
    RULE_bitOrExpression = 36
    RULE_bitXorExpression = 37
    RULE_bitAndExpression = 38
    RULE_equalityExpression = 39
    RULE_relationalExpression = 40
    RULE_shiftExpression = 41
    RULE_additiveExpression = 42
    RULE_multiplicativeExpression = 43
    RULE_unaryExpression = 44
    RULE_postfixExpression = 45
    RULE_primaryExpression = 46
    RULE_typeofExpr = 47
    RULE_literal = 48
    RULE_namedArgList = 49
    RULE_namedArg = 50
    RULE_pipelineArgList = 51
    RULE_pipelineArg = 52
    RULE_structLiteral = 53
    RULE_structFieldInitList = 54
    RULE_structFieldInit = 55
    RULE_dictLiteral = 56
    RULE_dictField = 57
    RULE_arrayLiteral = 58
    RULE_vecLiteral = 59
    RULE_expressionList = 60
    RULE_functionLiteral = 61
    RULE_paramList = 62
    RULE_param = 63
    RULE_block = 64
    RULE_flowBlock = 65
    RULE_matchBlock = 66
    RULE_matchClause = 67
    RULE_catchBlock = 68
    RULE_ifLikeExpr = 69
    RULE_loopExpr = 70
    RULE_statement = 71
    RULE_expressionStatement = 72
    RULE_returnStatement = 73
    RULE_breakStatement = 74
    RULE_continueStatement = 75
    RULE_throwStatement = 76

    ruleNames =  [ "compilationUnit", "declaration", "variableDecl", "structDecl", 
                   "structMember", "structSpread", "structField", "structMethod", 
                   "typeAliasDecl", "typeShape", "typeShapeMember", "typeShapeSpread", 
                   "functionDecl", "importDecl", "importSpecList", "importSpec", 
                   "exportDecl", "externDecl", "targetPlatform", "declareDecl", 
                   "type_", "baseType", "genericParams", "genericArgs", 
                   "typeList", "functionType", "paramTypeList", "paramType", 
                   "expression", "assignmentExpression", "assignmentOperator", 
                   "pipelineExpression", "conditionalExpression", "rangeExpression", 
                   "orExpression", "andExpression", "bitOrExpression", "bitXorExpression", 
                   "bitAndExpression", "equalityExpression", "relationalExpression", 
                   "shiftExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "postfixExpression", "primaryExpression", 
                   "typeofExpr", "literal", "namedArgList", "namedArg", 
                   "pipelineArgList", "pipelineArg", "structLiteral", "structFieldInitList", 
                   "structFieldInit", "dictLiteral", "dictField", "arrayLiteral", 
                   "vecLiteral", "expressionList", "functionLiteral", "paramList", 
                   "param", "block", "flowBlock", "matchBlock", "matchClause", 
                   "catchBlock", "ifLikeExpr", "loopExpr", "statement", 
                   "expressionStatement", "returnStatement", "breakStatement", 
                   "continueStatement", "throwStatement" ]

    EOF = Token.EOF
    LET=1
    CONST=2
    STATIC=3
    STRUCT=4
    TYPE=5
    DECLARE=6
    LOOP=7
    BREAK=8
    CONTINUE=9
    IMPORT=10
    EXPORT=11
    FROM=12
    MATCH=13
    CATCH=14
    THROW=15
    FLOW=16
    TYPEOF=17
    RETURN=18
    IN=19
    FOR=20
    AS=21
    EXTERN=22
    I8=23
    I32=24
    I64=25
    U8=26
    U32=27
    U64=28
    F32=29
    F64=30
    STR=31
    BOOL=32
    VOID=33
    VEC=34
    LIST=35
    LINUX=36
    MACOS=37
    WINDOWS=38
    ANDROID=39
    IOS=40
    EMCC=41
    BOOL_LITERAL=42
    INTEGER_LITERAL=43
    FLOAT_LITERAL=44
    STRING_LITERAL=45
    IDENTIFIER=46
    LPAREN=47
    RPAREN=48
    LBRACE=49
    RBRACE=50
    LBRACK=51
    RBRACK=52
    LANGLE=53
    RANGLE=54
    SEMI=55
    COLON=56
    COMMA=57
    DOT=58
    ASSIGN=59
    QUESTION=60
    BANG=61
    AT=62
    AMPERSAND=63
    PIPE=64
    CARET=65
    TILDE=66
    PLUS=67
    MINUS=68
    STAR=69
    SLASH=70
    PERCENT=71
    EQ=72
    NE=73
    LE=74
    GE=75
    SHL=76
    SHR=77
    AND=78
    OR=79
    PLUS_ASSIGN=80
    MINUS_ASSIGN=81
    STAR_ASSIGN=82
    SLASH_ASSIGN=83
    PERCENT_ASSIGN=84
    AMPERSAND_ASSIGN=85
    PIPE_ASSIGN=86
    CARET_ASSIGN=87
    SHL_ASSIGN=88
    SHR_ASSIGN=89
    FAT_ARROW=90
    THIN_ARROW=91
    ELLIPSIS=92
    LINE_COMMENT=93
    BLOCK_COMMENT=94
    WS=95

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EzLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(EzLangParser.StatementContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(EzLangParser.DeclarationContext,i)


        def externDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.ExternDeclContext)
            else:
                return self.getTypedRuleContext(EzLangParser.ExternDeclContext,i)


        def getRuleIndex(self):
            return EzLangParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = EzLangParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3470863556957174782) != 0) or ((((_la - 66)) & ~0x3f) == 0 and ((1 << (_la - 66)) & 7) != 0):
                self.state = 157
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 154
                    self.statement()
                    pass

                elif la_ == 2:
                    self.state = 155
                    self.declaration()
                    pass

                elif la_ == 3:
                    self.state = 156
                    self.externDecl()
                    pass


                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(EzLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(EzLangParser.FunctionDeclContext,0)


        def variableDecl(self):
            return self.getTypedRuleContext(EzLangParser.VariableDeclContext,0)


        def structDecl(self):
            return self.getTypedRuleContext(EzLangParser.StructDeclContext,0)


        def typeAliasDecl(self):
            return self.getTypedRuleContext(EzLangParser.TypeAliasDeclContext,0)


        def importDecl(self):
            return self.getTypedRuleContext(EzLangParser.ImportDeclContext,0)


        def exportDecl(self):
            return self.getTypedRuleContext(EzLangParser.ExportDeclContext,0)


        def declareDecl(self):
            return self.getTypedRuleContext(EzLangParser.DeclareDeclContext,0)


        def getRuleIndex(self):
            return EzLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = EzLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.functionDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.variableDecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.structDecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.typeAliasDecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                self.importDecl()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.exportDecl()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 170
                self.declareDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(EzLangParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(EzLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(EzLangParser.ExpressionContext,0)


        def LET(self):
            return self.getToken(EzLangParser.LET, 0)

        def CONST(self):
            return self.getToken(EzLangParser.CONST, 0)

        def STATIC(self):
            return self.getToken(EzLangParser.STATIC, 0)

        def COLON(self):
            return self.getToken(EzLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(EzLangParser.Type_Context,0)


        def SEMI(self):
            return self.getToken(EzLangParser.SEMI, 0)

        def getRuleIndex(self):
            return EzLangParser.RULE_variableDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDecl" ):
                listener.enterVariableDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDecl" ):
                listener.exitVariableDecl(self)




    def variableDecl(self):

        localctx = EzLangParser.VariableDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 174
            self.match(EzLangParser.IDENTIFIER)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==56:
                self.state = 175
                self.match(EzLangParser.COLON)
                self.state = 176
                self.type_(0)


            self.state = 179
            self.match(EzLangParser.ASSIGN)
            self.state = 180
            self.expression()
            self.state = 182
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 181
                self.match(EzLangParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(EzLangParser.STRUCT, 0)

        def IDENTIFIER(self):
            return self.getToken(EzLangParser.IDENTIFIER, 0)

        def LBRACE(self):
            return self.getToken(EzLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(EzLangParser.RBRACE, 0)

        def genericParams(self):
            return self.getTypedRuleContext(EzLangParser.GenericParamsContext,0)


        def structMember(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EzLangParser.StructMemberContext)
            else:
                return self.getTypedRuleContext(EzLangParser.StructMemberContext,i)


        def SEMI(self):
            return self.getToken(EzLangParser.SEMI, 0)

        def getRuleIndex(self):
            return EzLangParser.RULE_structDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDecl" ):
                listener.enterStructDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDecl" ):
                listener.exitStructDecl(self)




    def structDecl(self):

        localctx = EzLangParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(EzLangParser.STRUCT)
            self.state = 185
            self.match(EzLangParser.IDENTIFIER)
            self.state = 187
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==53:
                self.state = 186
                self.genericParams()


            self.state = 189
            self.match(EzLangParser.LBRACE)
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46 or _la==92:
                self.state = 190
                self.structMember()
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 196
            self.match(EzLangParser.RBRACE)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 197
                self.match(EzLangParser.SEMI)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructMemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structField(self):
            return self.getTypedRuleContext(EzLangParser.StructFieldContext,0)


        def structMethod(self):
            return self.getTypedRuleContext(EzLangParser.StructMethodContext,0)


        def structSpread(self):
            return self.getTypedRuleContext(EzLangParser.StructSpreadContext,0)


        def getRuleIndex(self):
            return EzLangParser.RULE_structMember
